assets/css/style.css
/* ... */
@media screen and (max-width: 768px) {

  
}



@media screen and (max-width: 600px) {
    
    /* Home Page - Logo and Nav Bar*/    

    .logo-all {
        font-size: 150%;
    }

    .menu-all {
        font-size: 100%;
        padding: 0;
        word-spacing: 0;
        line-height: 35px;
        text-align: center;
        
        margin: 0;
    }

    .menu-all ul li a {
        padding: 0px 7px;
    }


    .active {
        border-bottom: 1px solid #181D31;
        font-size: 100%;
    }
    
    .image-text {
        font-size: 100%;
        width: 220px;
        height: fit-content;
        text-align: center;
        padding: 15px 20px;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    /* Home Page - Story Section */
    .story-section {
        height: fit-content; /* This is to extend the height of the sections (Story and Recipe of the day in order to allow more content) */
        width: 100%;  
    }

    .right-story {
        width: 90%;
        padding: 0;
        margin: 40px 40px 0 40px;
        text-align: center;
        box-sizing: border-box;
    }
    
    .left-story {
        width: 90%;
        margin: 0 40px 40px 40px;
        padding: 0;
        text-align: justify;
    }


    /* Home Page - Recipe of the Day Section */
    
    .images-recipes-day {
        width: 90%;
        height: auto;
        box-sizing: border-box;
        margin: 0 20px;
        padding: 0;
    }

    .flex-ingredient-recipe {
        align-self: auto;
        margin: 0 20px 40px 20px;
        padding: 0;
        
        text-align: left;
    }


    /* Footer */

    .social-network li i {
        padding: 0;
    }


    /* Recipes Page MQ*/
    .recipe-anchor { 
        padding: 5px 15px;
        font-size: 15px;
        width: 100px;
    }

    #container-recipes-buttons nav a { 
        width: 90px; 
        padding: 10px 15px;
        font-size: 16px;
    }

    .recipes-page-title {
        font-size: 80%;
        margin-top: 20px;
        padding-top: 20px;
        text-decoration-line: underline;
    }

    .container-single-recipe {
        max-width: 310px;
        min-width: 310px;
        flex-shrink: 0;
    }

    .container-amd .container-slides {
        flex-flow: column nowrap;
        gap: 10px;
        justify-content: center;
        align-content: center;
        align-items: center;
    }

    /* Contact Us & Share Pages */

    .images-text-sc {
        min-width: 90vw;
        font-size: 70%;
        padding: 20px;
    }

    .forms-users {
        min-width: 90vw;
        font-size: 100%;
        padding: 20px;
    }

    .buttons { 
        width: 100px;
        margin-top: 40px;
        padding: 10px 0;
    
        font-size: 90%;    
    }

    input[type="file"] {
        width: 100%;
        margin-top: 40px;
        padding: 0;
        font-size: 90%;
    }

    input[type="text"]::placeholder, input[type="email"]::placeholder {
        color: transparent;
    }

    .titles-sections {
        font-size: 200%;
        margin: 30px 20px 5px 20px;
    }

    .about-us-ad h3 {
        font-size: 150%;
    }

    .about-us-address h4 {
        font-size: 100%;
    }

    .radio-label-contact-share {
        margin-right: 1px;
    }

    .radio-buttons-contact-share{
        margin-right: 5px;
    }

    /* Error 404 Page */
    .text-thanks-error-pages {
        font-size: 80%;
    }
}





@media screen and (max-width: 350px) {

   .logo-all {
        font-size: 125%;
        line-height: 50px;
    }

    .menu-all {
        line-height: 50px;
        font-size: 80%;
    }


    .titles-sections {
        font-size: 150%;
        margin: 20px auto;
    }

}




/* Popup */

.wrapper {
    display: flex;
    justify-content: center;
    max-width: 100%;
    text-align: center;
    color: #FB743E;
}

.popup {
    position: fixed;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    background: #181D31;
    display: none;
}

.content-popup {
    width: 80%;
    height: 100%;
    margin: 40px auto;
    position: relative;
    border: 5px solid #181D31;
    color: #FB743E;
}

.close {
    position: absolute;
    top: 0;
    right: 0;
    background-color: #181D31;
    border-radius: 50%;
    border: 2px solid #FB743E;
    color: #FB743E;
    text-decoration: none;
    line-height: 1;
    padding: 5px 8px;
    text-align: center;
}

.popup:target {
    display: block
}

.popup .content-popup h2 {
    color: #FB743E;
    text-align: center;
    line-height: 20px;
}

.popup .content-popup p {
    color: #E6DDC4;
    text-align: justify;
    margin-top: 40px;
}




/* Lateral Slider CSS Experiment */
.slider {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
  }

  .slider > a {
    display: inline-flex;
    width: 30px;
    height: 20px;

    font-family: 'Viga', sans-serif;
    background: #181D31;
    text-decoration: none;
    color: #E6DDC4;
    align-items: center;
    justify-content: center;
    border-radius: 50px;
    padding: 20px 20px;
    margin: 10px 10px;
  }


  .slider > a:hover {
    color: #FB743E;
  }
  
   

